Leetcode #3541